--- a/index.html
+++ b/index.html
@@ -27,22 +27,27 @@
 
     <div class="card-container">
       <div class="card">
+        <!-- <div class="line"></div> -->
         <h3>Supervisor</h3>
         <p>Monitors activity to identify project roadblocks</p>
+        <img src="./images/icon-supervisor.svg" alt="magnifiying glass"/>
       </div>
       <div class="card">
         <h3>Team Builder</h3>
         <p>
           Scans our talent network to create the optimal team for your project
         </p>
+        <img src="./images/icon-team-builder.svg" alt="homepage icon"/>
       </div>
       <div class="card">
         <h3>Karma</h3>
         <p>Regularly evaluates our talent to ensure quality</p>
+        <img src="./images/icon-karma.svg" alt="lightbulb icon"/>
       </div>
       <div class="card">
         <h3>Calculator</h3>
         <p>Uses data from past projects to provide better delivery estimates</p>
+        <img src="./images/icon-calculator.svg" alt="desktop icon"/>
       </div>
     </div>
 
