--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </p>
 
     <div class="card-container">
-      <div class="card">
+      <div class="card" id="supervisor">
         <div class="line cyan"></div>
         <div class="content">
           <h3>Supervisor</h3>
@@ -34,7 +34,7 @@
           <img src="./images/icon-supervisor.svg" alt="magnifiying glass" />
         </div>
       </div>
-      <div class="card">
+      <div class="card" id="builder">
         <div class="line red"></div>
         <div class="content">
           <h3>Team Builder</h3>
@@ -44,7 +44,7 @@
           <img src="./images/icon-team-builder.svg" alt="homepage icon" />
         </div>
       </div>
-      <div class="card">
+      <div class="card" id="karma">
         <div class="line yellow"></div>
         <div class="content">
           <h3>Karma</h3>
@@ -52,7 +52,7 @@
           <img src="./images/icon-karma.svg" alt="lightbulb icon" />
         </div>
       </div>
-      <div class="card">
+      <div class="card" id="calculator">
         <div class="line blue"></div>
         <div class="content">
           <h3>Calculator</h3>
